cabal-version:      2.4
name:               advent-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jake Faulkner
maintainer:         jakefaulkn@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: RankNTypes
    build-depends:    base ^>=4.16.3.0, parsec ^>=3.1.15.1, containers, lens-family, transformers, fgl, array
    hs-source-dirs:   app
    other-modules: Utils, Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Parse, Day10, Day11, Day12
    default-language: Haskell2010
